# autotools-tutorial-python-gtk

./: .gitignore
hello-world-0.1/: Makefile  Makefile.in  (+1 more)
hello-world-0.2/: Makefile  Makefile.in  configure  configure.ac
hello-world-0.2/data/: Makefile  Makefile.in
hello-world-0.2/data/icons/: Makefile  Makefile.in
hello-world-0.2/data/icons/hicolor/: Makefile  Makefile.am  Makefile.in
hello-world-0.2/data/icons/hicolor/128x128/: Makefile
hello-world-0.2/data/icons/hicolor/128x128/apps/: Makefile
hello-world-0.2/data/icons/hicolor/16x16/: Makefile
hello-world-0.2/data/icons/hicolor/16x16/apps/: Makefile  Makefile.am
hello-world-0.2/data/icons/hicolor/22x22/: Makefile
hello-world-0.2/data/icons/hicolor/24x24/: Makefile
hello-world-0.2/data/icons/hicolor/32x32/: Makefile
hello-world-0.2/data/icons/hicolor/48x48/: Makefile
hello-world-0.2/data/icons/hicolor/64x64/: Makefile
hello-world-0.2/data/icons/hicolor/scalable/: Makefile
hello-world-0.2/src/: Makefile  Makefile.am  hello-world  hello-world.in
hello-world-0.2/src/hello/: Makefile
hello-world-0.3/: Makefile  configure  configure.ac
hello-world-0.3/data/: Makefile  Makefile.am  Makefile.in  hello-world.desktop  hello-world.desktop.in
hello-world-0.3/data/icons/: Makefile
hello-world-0.3/data/icons/hicolor/: Makefile  Makefile.in
hello-world-0.3/data/icons/hicolor/48x48/: Makefile
hello-world-0.3/data/icons/hicolor/scalable/: Makefile
hello-world-0.3/src/: Makefile  Makefile.am  Makefile.in  hello-world  hello-world.in
hello-world-0.3/src/hello/: Makefile  application.py
(+51 files in other folders)
