AC_INIT([Hello World], [0.2])

AM_INIT_AUTOMAKE
AM_PATH_PYTHON([2.5])

AC_CONFIG_FILES([
    Makefile 
    data/Makefile
    data/icons/Makefile
    data/icons/hicolor/Makefile
    data/icons/hicolor/16x16/Makefile
    data/icons/hicolor/16x16/apps/Makefile
    data/icons/hicolor/22x22/Makefile
    data/icons/hicolor/22x22/apps/Makefile
    data/icons/hicolor/24x24/Makefile
    data/icons/hicolor/24x24/apps/Makefile
    data/icons/hicolor/32x32/Makefile
    data/icons/hicolor/32x32/apps/Makefile
    data/icons/hicolor/48x48/Makefile
    data/icons/hicolor/48x48/apps/Makefile
    data/icons/hicolor/64x64/Makefile
    data/icons/hicolor/64x64/apps/Makefile
    data/icons/hicolor/128x128/Makefile
    data/icons/hicolor/128x128/apps/Makefile
    data/icons/hicolor/scalable/Makefile
    data/icons/hicolor/scalable/apps/Makefile
    src/Makefile 
    src/hello/Makefile])

AC_OUTPUT
