AC_INIT([Hello World], [0.3])

AM_INIT_AUTOMAKE
AM_PATH_PYTHON([2.5])

AC_CONFIG_FILES([
    Makefile 
    data/Makefile
    data/hello-world.desktop
    data/icons/Makefile
    data/icons/hicolor/Makefile
    data/icons/hicolor/48x48/Makefile
    data/icons/hicolor/48x48/apps/Makefile
    data/icons/hicolor/scalable/Makefile
    data/icons/hicolor/scalable/apps/Makefile
    src/Makefile 
    src/hello/Makefile])

AC_OUTPUT
